--- a/CRUD-LPPA/CRUD-LPPA.Master
+++ b/CRUD-LPPA/CRUD-LPPA.Master
@@ -28,12 +28,12 @@
                         <div class="sidebar-heading">USUARIO</div>
                         <div class="list-group list-group-flush">
                             <a runat="server" href="~/Default" class="list-group-item list-group-item-action ">Inicio</a>
-                            <a runat="server" href="~/seeUsersFormAdmin" class="list-group-item list-group-item-action ">Users</a>
+                            <a runat="server" href="~/addUserForm" class="list-group-item list-group-item-action ">Users</a>
                             <a runat="server" href="~/manageUsersForm" class="list-group-item list-group-item-action ">Para Test</a>
                             <a runat="server" href="~/privilegesForm" class="list-group-item list-group-item-action">Privilegios</a>
                         </div>
 
-                        <button type="button" class="btn btn-md" id="LogoutBtn">Logout</button>
+                        <button type="button" class="btn btn-md" id="LogoutBtn" onclick="logout();">Logout</button>
                     </div>
                 </div>
             </div>
@@ -50,5 +50,7 @@
         </div>
     </div>
 </form>
+
+    <script type="text/javascript" src="\Scripts\LPPA\LoginScript.js"></script>
 </body>
 </html>
