--- a/CRUD-LPPA/CRUD-LPPA.Master
+++ b/CRUD-LPPA/CRUD-LPPA.Master
@@ -4,7 +4,7 @@
 
 <html lang="en">
 <head runat="server">
-<title><%: Page.Title %> - My ASP.NET Application</title>
+<title><%: Page.Title %> - LPPA - CRUD</title>
 
 <asp:PlaceHolder runat="server">
 <%: Scripts.Render("~/bundles/modernizr") %>
