--- a/CRUD-LPPA/Content/MasterStyle.css
+++ b/CRUD-LPPA/Content/MasterStyle.css
@@ -6,6 +6,11 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+#wrapper {
+    height: 100%;
+    min-height: 100vh;
+}
+
 #sidebar-wrapper {
     min-height: 100vh;
     margin-left: 10%;
@@ -50,7 +55,7 @@ body {
 #leftCol {
     margin: auto;
     padding: 0px;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.82);
     color: #38d39f;
     border-inline: 4px #38d38f solid;
     border-radius: 5px;
@@ -97,7 +102,7 @@ body {
 
 footer{
     margin:auto;
-    
+    padding-left:10px;
     width: 100%;
     height: 20px; 
 }
