--- a/CRUD-LPPA/CRUD-LPPA.Master
+++ b/CRUD-LPPA/CRUD-LPPA.Master
@@ -16,7 +16,9 @@
 <script type="text/javascript" src="\Scripts\LPPA\LoginScript.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 <link href="\Content\MasterStyle.css" rel="stylesheet" />
-<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="text/javascript" src="\Scripts\LPPA\UserScript.js"></script>
+    <script type="text/javascript" src="\Scripts\LPPA\ForTests.js"></script>
 
 
 </head>
@@ -29,7 +31,7 @@
                     <div id="sidebar-wrapper">
                         <div runat="server" class="sidebar-heading" id="userTitle">USUARIO</div>
                         <div class="list-group list-group-flush">
-                            <a runat="server" onclick="location.replace('Default.aspx?user='+document.getElementById('userTitle').innerHTML); return false;" class="list-group-item list-group-item-action">Inicio</a>
+                            <a runat="server" onclick="location.replace('Default.aspx?user='+document.getElementById('userTitle').innerHTML); return false;" class="list-group-item list-group-item-action" >Inicio</a>
                             <a runat="server" id="User" onclick="location.replace('seeUsersForm.aspx?user='+document.getElementById('userTitle').innerHTML);  return false;" class="list-group-item list-group-item-action" >Users</a>
                             <a runat="server" id="Admin" onclick="location.replace('seeUsersFormAdmin.aspx?user='+document.getElementById('userTitle').innerHTML); return false;" class="list-group-item list-group-item-action" >Users</a>
                             <a runat="server" id="SuperAdmin" onclick="location.replace('privilegesForm.aspx?user='+document.getElementById('userTitle').innerHTML);  return false;" class="list-group-item list-group-item-action" >Privilegios</a>
@@ -52,6 +54,8 @@
         </div>
     </div>
 </form>
+
+
 
     
 </body>
