--- a/CRUD-LPPA/Content/MasterStyle.css
+++ b/CRUD-LPPA/Content/MasterStyle.css
@@ -70,8 +70,9 @@ a:hover {
     padding: 0px;
     padding-right: 10px;
     width: 100%;
-    height: 100%;
+    height: 80vh;
     margin-bottom: 10%;
+
 }
 
 #PageContent {
@@ -111,3 +112,4 @@ footer{
     width: 100%;
     height: 20px; 
 }
+
